fix PrivateRoute recursive redirect overflow

--- a/client/src/css/small-default.css
+++ b/client/src/css/small-default.css
@@ -8,14 +8,21 @@ html {
     font-size: 16px;
 }
 
-body {
+html, body {
     height: 100%;
-    max-height: 100%;
+}
+
+body {
     font-family: "Merriweather", serif;
     letter-spacing: 0.01rem;
     line-height: 1.75rem;
     color: var(--color);
 }
+
+#root {
+    height: 100%;
+}
+
 
 /*******************
 *  Signin Section   *
@@ -78,6 +85,7 @@ header .avatar img {
 
 .page-content {
     padding: 0 1rem;
+    height: 100%;
 }
 
 /********************
@@ -199,8 +207,6 @@ tr:hover {
 }
 
 .input-group {
-    /* padding: 0.1rem 0.5rem; */
-    /* background-color: #e2e2e2; */
     display: grid;
     grid-gap: 0.1rem;
     grid-template-columns: 1;
@@ -491,4 +497,13 @@ pre code, pre tt {
     display: grid;
     grid-gap: 0.5rem;
     grid-template-columns: 1fr 1fr;
+}
+
+/*******************
+*     util         *
+********************/
+
+.full-height {
+    height: 100%;
+    background-color: #999999;
 }
